--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Resume - Mahadevu M P</title>
   </head>
   <body style="margin:0;padding:0;">
-    <embed src="MAHADEVU_M_P-mp657-mail.pdf" type="application/pdf" width="100%" height="100%" />
+    <embed src="MAHADEVU_M_P-mp657-mai.pdf" type="application/pdf" width="100%" height="100%" />
   </body>
 </html>
