Redirect to resume PDF with meta tag
Removed title and added meta refresh for PDF redirect.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Resume - Mahadevu M P</title>
+    <meta http-equiv="refresh" content="0; url=MAHADEVU_M_P-mp657-mai.pdf" />
   </head>
-  <body style="margin:0;padding:0;">
-    <embed src="MAHADEVU_M_P-mp657-mai.pdf" type="application/pdf" width="100%" height="100%" />
+  <body>
+    <p>If you are not redirected automatically, <a href="MAHADEVU_M_P-mp657-mai.pdf">click here to view the resume</a>.</p>
   </body>
 </html>
